--- a/css/nav.css
+++ b/css/nav.css
@@ -1,6 +1,6 @@
 .site-nav {
-    top: 3%;
-    right: 0;
+    top: 5%;
+    right: 1%;
     position: absolute;
     background: #ffffff;
     z-index: 100;
@@ -28,8 +28,9 @@
 
 .site-nav a {
     color: #000000;
+    font-size: 1rem;
     display: block;
-    padding: 1em 5em;
+    padding: 0.25em 3.3em;
     text-transform: uppercase;
     text-decoration: none;
 }
@@ -122,5 +123,4 @@
     .site-nav a:focus {
         background: rgb(255, 255, 255);
     }
-
 }
