--- a/pages/satoshiCollage/custom.css
+++ b/pages/satoshiCollage/custom.css
@@ -1,5 +1,5 @@
 .hero {
-  background-image: url('img/banner.jpg');
+  background-image: url('img/satoshi_collage__0001_Calque\ 10.jpg');
   background-size: cover;
   background-color: rgb(255, 255, 255);
   padding-bottom: 50rem;
