--- a/projects/monaKamoto/custom.css
+++ b/projects/monaKamoto/custom.css
@@ -1,16 +1,16 @@
 .hero {
-  background-image: url('img/banner.jpg');
+  background-image: url('img/banner.png');
   background-size: cover;
   background-color: rgb(255, 255, 255);
   padding-bottom: 50rem;
 }
 
-/* .beforeFooter {
-    background-image: url('img/mountains_0001_Calque\ 4.jpg');
+.beforeFooter {
+    background-image: url('img/banner.png');
     background-size: cover;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
     padding-bottom: 3rem;
-  } */
+  }
 
 .myDate h5 {
   font-size: 1.25rem;
@@ -22,3 +22,5 @@
   font-style: italic;
   background-color: rgb(231, 231, 231);
 }
+
+.legend{color: white; background-color: black; padding-bottom: 5%; padding-top: 2.5%}
