--- a/css/masonry.css
+++ b/css/masonry.css
@@ -13,6 +13,18 @@ height: auto;
     margin-bottom: 1em;;
 }
 
+@media (max-width:1920px) {
+    .masonry {
+        column-count: 3;
+    }
+    .masonry2 {
+        column-count: 2;
+    }
+    .masonry3 {
+        column-count: 1;
+    }
+}
+
 @media (max-width:1280px) {
     .masonry {
         column-count: 3;
