architecture of projects

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -634,7 +634,7 @@ there.
 }
 
 .projects {
-  text-align: center;
+  text-align: left;
 }
 
 .projects h5 {
@@ -650,8 +650,8 @@ li {
 
 .projects a {
   font-size: 1.2rem;
-  padding-left: 25%;
-  padding-right: 25%;
+  padding-left: 15%;
+  padding-right: 15%;
   text-align: left;
   text-decoration: none;
   background-color: #FFF;
