architecture of projects

--- a/projects/voyage_en_orient/custom.css
+++ b/projects/voyage_en_orient/custom.css
@@ -1,5 +1,5 @@
 .hero {
-    background-image: url('projet/banner.jpg');
+    background-image: url('projet/VEO-2a-10-1024x576.jpg');
     background-size: cover;
     background-color: rgb(255, 255, 255);
     padding-bottom: 33rem;
